teamwork/Kubernetes/test/nginx_ssl_k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dritonservice
  namespace: driton
spec:
  # type: LoadBalancer
  selector:
    app: nginx
  ports:
    - name: httpd
      protocol: TCP
      port: 80
      targetPort: 80
